--- a/index.html
+++ b/index.html
@@ -1,17 +1,167 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/x-icon" href="./assets/img/favicon.ico">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="./assets/css/style.css">
     <title>Tornado - Home</title>
 </head>
+
 <body>
-    
+
+    <div class="index-page">
+        <div id="sidebar" class="sidebar bg-light collapsed">
+            <div class="sidebar-container">
+                <div class="sidebar-inner">
+                    <div class="sidebar-header">
+                        <a href="./index.html" class="logo-md">
+                            <img src="./assets/img/logo.svg" alt="">
+                        </a>
+                        <a href="./index.html" class="logo-sm">
+                            <img src="./assets/img/logo-mini.svg" alt="">
+                        </a>
+                    </div>
+                    <div class="toggle-btn">
+                        <i class="bi bi-list"></i> <!-- Toggle icon -->
+                    </div>
+                    <div class="sidebar-content">
+                        <ul class="nav flex-column p-2">
+                            <li class="nav-item">
+                                <a href="#" class="nav-link active">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="14" height="15" viewBox="0 0 14 15"
+                                        fill="none">
+                                        <g clip-path="url(#clip0_1_2519)">
+                                            <path d="M0.5 1V14H13.5" stroke="#919191" stroke-linecap="round"
+                                                stroke-linejoin="round" />
+                                            <path d="M3.5 7L6 9.5L10 3.5L13.5 6" stroke="#919191" stroke-linecap="round"
+                                                stroke-linejoin="round" />
+                                        </g>
+                                        <defs>
+                                            <clipPath id="clip0_1_2519">
+                                                <rect width="14" height="14" fill="#387FF8"
+                                                    transform="translate(0 0.5)" />
+                                            </clipPath>
+                                        </defs>
+                                    </svg>
+                                    <span>Dashboard</span>
+                                </a>
+                            </li>
+                            <li class="nav-item">
+                                <a href="#" class="nav-link">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="18" height="19" viewBox="0 0 18 19"
+                                        fill="none">
+                                        <path fill-rule="evenodd" clip-rule="evenodd"
+                                            d="M2.8125 3.03125H8.15625C8.31159 3.03125 8.4375 3.15716 8.4375 3.3125V8.65625C8.4375 8.81159 8.31159 8.9375 8.15625 8.9375H2.8125C2.65716 8.9375 2.53125 8.81159 2.53125 8.65625V3.3125C2.53125 3.15716 2.65716 3.03125 2.8125 3.03125ZM12.7321 2.58594L15.9141 5.76793C16.0239 5.87776 16.0239 6.05583 15.9141 6.16567L12.7321 9.34765C12.6222 9.45748 12.4442 9.45748 12.3343 9.34765L9.15235 6.16566C9.04252 6.05583 9.04252 5.87776 9.15235 5.76792L12.3343 2.58594C12.4442 2.47611 12.6222 2.47611 12.7321 2.58594ZM2.8125 10.0625H8.15625C8.31159 10.0625 8.4375 10.1884 8.4375 10.3437V15.6875C8.4375 15.8428 8.31159 15.9687 8.15625 15.9687H2.8125C2.65716 15.9687 2.53125 15.8428 2.53125 15.6875V10.3437C2.53125 10.1884 2.65716 10.0625 2.8125 10.0625ZM9.84375 10.0625H15.1875C15.3428 10.0625 15.4688 10.1884 15.4688 10.3437V15.6875C15.4688 15.8428 15.3428 15.9687 15.1875 15.9687H9.84375C9.68841 15.9687 9.5625 15.8428 9.5625 15.6875V10.3437C9.5625 10.1884 9.68841 10.0625 9.84375 10.0625Z"
+                                            fill="#919191" />
+                                    </svg>
+                                    <span>Mehsul bazasi</span>
+                                </a>
+                            </li>
+                            <li class="nav-item">
+                                <a href="#" class="nav-link">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="18" height="19" viewBox="0 0 18 19"
+                                        fill="none">
+                                        <path
+                                            d="M4.57888 16.182C5.83869 17.1743 7.39628 17.7127 8.99994 17.7104C10.6686 17.7104 12.2041 17.1395 13.421 16.182M6.89467 3.70915C3.96878 4.6081 1.84204 7.33189 1.84204 10.5525C1.84204 11.363 1.97678 12.142 2.2252 12.8683M11.1052 3.70915C14.0311 4.6081 16.1578 7.33189 16.1578 10.5525C16.1578 11.363 16.0231 12.142 15.7747 12.8683"
+                                            stroke="#919191" />
+                                        <path
+                                            d="M17 14.763C17 15.3281 16.7777 15.8409 16.4156 16.219C16.0774 16.5723 15.6268 16.7968 15.1412 16.8541C14.6555 16.9113 14.1651 16.7977 13.754 16.5327C13.343 16.2678 13.0371 15.868 12.8887 15.402C12.7403 14.936 12.7588 14.4329 12.941 13.9791C13.1231 13.5252 13.4576 13.149 13.887 12.9149C14.3163 12.6808 14.8138 12.6035 15.294 12.6962C15.7741 12.789 16.207 13.046 16.5183 13.4231C16.8296 13.8002 16.9999 14.274 17 14.763ZM5.21053 14.763C5.21053 15.3281 4.98821 15.8409 4.62611 16.219C4.28795 16.5723 3.83737 16.7968 3.3517 16.8541C2.86603 16.9113 2.37559 16.7977 1.96456 16.5327C1.55354 16.2678 1.24758 15.868 1.09922 15.402C0.950861 14.936 0.969349 14.4329 1.15151 13.9791C1.33368 13.5252 1.66815 13.149 2.09751 12.9149C2.52687 12.6808 3.02434 12.6035 3.50449 12.6962C3.98465 12.789 4.41754 13.046 4.72885 13.4231C5.04016 13.8002 5.21047 14.274 5.21053 14.763ZM11.1053 3.3946C11.1053 3.95965 10.8829 4.4725 10.5208 4.8506C10.1827 5.20388 9.7321 5.42841 9.24644 5.48565C8.76077 5.5429 8.27032 5.42928 7.8593 5.16431C7.44828 4.89934 7.14232 4.49954 6.99396 4.03356C6.8456 3.56758 6.86409 3.06448 7.04625 2.61065C7.22841 2.15682 7.56289 1.78056 7.99225 1.54647C8.42161 1.31238 8.91907 1.23506 9.39923 1.3278C9.87938 1.42054 10.3123 1.67754 10.6236 2.05468C10.9349 2.43182 11.1052 2.90557 11.1053 3.3946Z"
+                                            fill="#919191" stroke="#919191" stroke-linecap="round"
+                                            stroke-linejoin="round" />
+                                    </svg>
+                                    <span>Sms/Email</span>
+                                </a>
+                            </li>
+                            <li class="nav-item">
+                                <a href="#" class="nav-link">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="25" viewBox="0 0 24 25"
+                                        fill="none">
+                                        <path
+                                            d="M12 12.1254C13.3689 12.1254 14.5461 10.9031 14.5461 9.31143C14.5461 7.739 13.3624 6.57414 12 6.57414C10.6376 6.57414 9.45343 7.76471 9.45343 9.32429C9.45343 10.9031 10.6311 12.1254 12 12.1254ZM4.67271 12.2716C5.85686 12.2716 6.88843 11.2023 6.88843 9.821C6.88843 8.45214 5.85043 7.43986 4.67271 7.43986C3.48857 7.43986 2.44457 8.47743 2.451 9.83343C2.451 11.2023 3.48214 12.272 4.67271 12.272M19.3273 12.272C20.5179 12.272 21.549 11.2027 21.549 9.83386C21.549 8.47786 20.5114 7.44029 19.3273 7.44029C18.1496 7.44029 17.1116 8.45257 17.1116 9.821C17.1116 11.2027 18.1431 12.272 19.3273 12.272ZM1.12029 18.0204H5.95886C5.29671 17.0591 6.105 15.1237 7.47386 14.0669C6.76671 13.5959 5.85686 13.2457 4.66671 13.2457C1.79486 13.2457 0 15.3654 0 17.129C0 17.702 0.318429 18.0204 1.12029 18.0204ZM22.8797 18.0204C23.688 18.0204 24 17.702 24 17.129C24 15.3654 22.2047 13.2457 19.3337 13.2457C18.1431 13.2457 17.2329 13.5959 16.5266 14.0669C17.895 15.1237 18.7037 17.0591 18.0416 18.0204H22.8797ZM7.99543 18.0204H15.9977C16.9971 18.0204 17.3537 17.7337 17.3537 17.1736C17.3537 15.5313 15.2974 13.265 11.9936 13.265C8.69614 13.265 6.63986 15.5313 6.63986 17.1736C6.63986 17.7337 6.996 18.0204 7.99543 18.0204Z"
+                                            fill="#919191" />
+                                    </svg>
+                                    <span>Müşteri melumatlari</span>
+                                </a>
+                            </li>
+                            <li class="nav-item">
+                                <a href="#" class="nav-link">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="18" height="19" viewBox="0 0 18 19"
+                                        fill="none">
+                                        <path
+                                            d="M9.00883 7.36601C8.48324 7.36601 7.99105 7.56992 7.6184 7.94258C7.2475 8.31523 7.04184 8.80742 7.04184 9.33301C7.04184 9.85859 7.2475 10.3508 7.6184 10.7234C7.99105 11.0943 8.48324 11.3 9.00883 11.3C9.53441 11.3 10.0266 11.0943 10.3993 10.7234C10.7702 10.3508 10.9758 9.85859 10.9758 9.33301C10.9758 8.80742 10.7702 8.31523 10.3993 7.94258C10.2172 7.75916 10.0006 7.61374 9.7619 7.51476C9.52321 7.41579 9.26723 7.36522 9.00883 7.36601ZM16.2563 11.5057L15.1067 10.523C15.1612 10.1891 15.1893 9.84805 15.1893 9.50879C15.1893 9.16953 15.1612 8.82676 15.1067 8.49453L16.2563 7.51191C16.3431 7.43757 16.4053 7.33855 16.4345 7.22802C16.4637 7.1175 16.4586 7.0007 16.4198 6.89316L16.4039 6.84746C16.0876 5.96274 15.6135 5.14265 15.0047 4.42695L14.9731 4.39004C14.8992 4.30312 14.8006 4.24063 14.6905 4.21082C14.5804 4.18101 14.4638 4.18527 14.3561 4.22305L12.9288 4.73105C12.4014 4.29863 11.8143 3.95762 11.178 3.72031L10.902 2.22793C10.8812 2.1155 10.8266 2.01207 10.7456 1.93138C10.6646 1.85069 10.561 1.79656 10.4485 1.77617L10.401 1.76738C9.48695 1.60215 8.52367 1.60215 7.60961 1.76738L7.56215 1.77617C7.44964 1.79656 7.346 1.85069 7.265 1.93138C7.18399 2.01207 7.12945 2.1155 7.10863 2.22793L6.8309 3.72734C6.20059 3.96653 5.61342 4.30672 5.09242 4.73457L3.65453 4.22305C3.54689 4.18497 3.43022 4.18056 3.32001 4.21039C3.2098 4.24022 3.11128 4.30288 3.03754 4.39004L3.0059 4.42695C2.3982 5.14341 1.92426 5.96329 1.60668 6.84746L1.59086 6.89316C1.51176 7.11289 1.5768 7.35898 1.75434 7.51191L2.91801 8.50508C2.86352 8.83555 2.83715 9.17305 2.83715 9.50703C2.83715 9.84453 2.86352 10.182 2.91801 10.509L1.75785 11.5021C1.67101 11.5765 1.60885 11.6755 1.57965 11.786C1.55045 11.8966 1.55559 12.0134 1.59437 12.1209L1.6102 12.1666C1.92836 13.0508 2.3977 13.8682 3.00941 14.5871L3.04105 14.624C3.11498 14.7109 3.2135 14.7734 3.32364 14.8032C3.43379 14.833 3.55038 14.8288 3.65805 14.791L5.09594 14.2795C5.61977 14.7102 6.20336 15.0512 6.83441 15.2867L7.11215 16.7861C7.13297 16.8986 7.18751 17.002 7.26851 17.0827C7.34952 17.1634 7.45316 17.2175 7.56566 17.2379L7.61313 17.2467C8.53618 17.4128 9.48148 17.4128 10.4045 17.2467L10.452 17.2379C10.5645 17.2175 10.6681 17.1634 10.7491 17.0827C10.8301 17.002 10.8847 16.8986 10.9055 16.7861L11.1815 15.2937C11.8178 15.0547 12.4049 14.7154 12.9323 14.283L14.3596 14.791C14.4672 14.8291 14.5839 14.8335 14.6941 14.8037C14.8043 14.7738 14.9029 14.7112 14.9766 14.624L15.0082 14.5871C15.62 13.8646 16.0893 13.0508 16.4075 12.1666L16.4233 12.1209C16.4989 11.9029 16.4338 11.6586 16.2563 11.5057ZM9.00883 12.4232C7.30199 12.4232 5.91859 11.0398 5.91859 9.33301C5.91859 7.62617 7.30199 6.24277 9.00883 6.24277C10.7157 6.24277 12.0991 7.62617 12.0991 9.33301C12.0991 11.0398 10.7157 12.4232 9.00883 12.4232Z"
+                                            fill="#919191" />
+                                    </svg>
+                                    <span>Ayarlar</span>
+                                </a>
+                            </li>
+                        </ul>
+                        <button class="logout-btn btn btn-primary btn-lg"><img src="./assets/icons/logout.svg"
+                                alt=""><span>Log out</span></button>
+                    </div>
+                    <div class="sidebar-footer">
+                        <div class="sidebar-footer-inner">
+                            <div class="profile-img"><img src="./assets/icons/user.svg" alt=""></div>
+                            <span>Username</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div id="content" class="page-body">
+            <div class="page-header">
+                <div class="search-bar">
+                    <div class="search-bar-inner">
+                        <form class="d-flex search-input">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
+                                fill="none">
+                                <path
+                                    d="M21 21L16.657 16.657M16.657 16.657C17.3998 15.9141 17.9891 15.0321 18.3912 14.0615C18.7932 13.0909 19.0002 12.0506 19.0002 11C19.0002 9.94936 18.7932 8.90905 18.3912 7.93842C17.9891 6.96779 17.3998 6.08585 16.657 5.34296C15.9141 4.60007 15.0321 4.01078 14.0615 3.60874C13.0909 3.20669 12.0506 2.99976 11 2.99976C9.94936 2.99976 8.90905 3.20669 7.93842 3.60874C6.96779 4.01078 6.08585 4.60007 5.34296 5.34296C3.84263 6.84329 2.99976 8.87818 2.99976 11C2.99976 13.1217 3.84263 15.1566 5.34296 16.657C6.84329 18.1573 8.87818 19.0002 11 19.0002C13.1217 19.0002 15.1566 18.1573 16.657 16.657Z"
+                                    stroke="#979797" stroke-linecap="round" stroke-linejoin="round" />
+                            </svg>
+                            <input class="form-control" type="search" placeholder="Search" aria-label="Search">
+                        </form>
+                    </div>
+                </div>
+                <div class="lang-dropdown">
+                    <div class="dropdown">
+                        <button class="btn btn-light dropdown-toggle" type="button" id="languageDropdown"
+                            data-bs-toggle="dropdown" aria-expanded="false">
+                            <div class="flag-icon">
+                                <img src="./assets/icons/az.svg" alt="AZ">
+                            </div> AZ
+                        </button>
+                        <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="languageDropdown"  id="dropdownMenu">
+                            <li>
+                                <a class="dropdown-item" href="#"  data-lang="en">
+                                    <div class="flag-icon">
+                                        <img src="./assets/icons/en.svg" alt="EN">
+                                    </div>
+                                    EN
+                                </a>
+                            </li>
+                            <li>
+                                <a class="dropdown-item" href="#"  data-lang="ru">
+                                    <div class="flag-icon">
+                                        <img src="./assets/icons/ru.svg" alt="RU">
+                                    </div>
+                                    RU
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            
+        </div>
+    </div>
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.js"></script>
     <script src="./assets/js/script.js"></script>
 </body>
+
 </html>
