add table first page

--- a/index.html
+++ b/index.html
@@ -133,9 +133,10 @@
                                 <img src="./assets/icons/az.svg" alt="AZ">
                             </div> AZ
                         </button>
-                        <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="languageDropdown"  id="dropdownMenu">
+                        <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="languageDropdown"
+                            id="dropdownMenu">
                             <li>
-                                <a class="dropdown-item" href="#"  data-lang="en">
+                                <a class="dropdown-item" href="#" data-lang="en">
                                     <div class="flag-icon">
                                         <img src="./assets/icons/en.svg" alt="EN">
                                     </div>
@@ -143,7 +144,7 @@
                                 </a>
                             </li>
                             <li>
-                                <a class="dropdown-item" href="#"  data-lang="ru">
+                                <a class="dropdown-item" href="#" data-lang="ru">
                                     <div class="flag-icon">
                                         <img src="./assets/icons/ru.svg" alt="RU">
                                     </div>
@@ -154,7 +155,68 @@
                     </div>
                 </div>
             </div>
-            
+            <div class="page-body-content">
+                <div class="table-container">
+                    <div class="table-container-inner">
+                        <table class="table table-bordered">
+                            <thead class="table-primary text-center">
+                                <tr>
+                                    <th scope="col">Məhsul siyahısı</th>
+                                    <th scope="col">Məhsul sayı</th>
+                                    <th scope="col">Məhsulun alış qiyməti</th>
+                                    <th scope="col">Məhsulun satiş qiyməti</th>
+                                    <th scope="col">Məhsulun limit sayı</th>
+                                </tr>
+                            </thead>
+                            <tbody class="text-center">
+                                <tr>
+                                    <td>1</td>
+                                    <td>323434</td>
+                                    <td>12 azn</td>
+                                    <td>23 azn</td>
+                                    <td>345</td>
+                                </tr>
+                                <tr>
+                                    <td>1</td>
+                                    <td>323434</td>
+                                    <td>12 azn</td>
+                                    <td>23 azn</td>
+                                    <td>345</td>
+                                </tr>
+                                <tr>
+                                    <td>1</td>
+                                    <td>323434</td>
+                                    <td>12 azn</td>
+                                    <td>23 azn</td>
+                                    <td>345</td>
+                                </tr>
+                                <tr>
+                                    <td>1</td>
+                                    <td>323434</td>
+                                    <td>12 azn</td>
+                                    <td>23 azn</td>
+                                    <td>345</td>
+                                </tr>
+                                <tr>
+                                    <td>1</td>
+                                    <td>323434</td>
+                                    <td>12 azn</td>
+                                    <td>23 azn</td>
+                                    <td>345</td>
+                                </tr>
+                                <tr>
+                                    <td>1</td>
+                                    <td>323434</td>
+                                    <td>12 azn</td>
+                                    <td>23 azn</td>
+                                    <td>345</td>
+                                </tr>
+                                <!-- Daha fazla satır ekleyebilirsiniz -->
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 
