--- a/customerdata.html
+++ b/customerdata.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/x-icon" href="./assets/img/favicon.ico">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
+    <link rel="stylesheet"
+        href="https://cdn.jsdelivr.net/npm/bootstrap-select@1.13.14/dist/css/bootstrap-select.min.css">
     <link rel="stylesheet" href="./assets/css/style.css">
     <title>Tornado - Home</title>
 </head>
@@ -48,7 +50,7 @@
                                 </a>
                             </li>
                             <li class="nav-item">
-                                <a href="./index.html" class="nav-link active">
+                                <a href="./index.html" class="nav-link">
                                     <svg xmlns="http://www.w3.org/2000/svg" width="18" height="19" viewBox="0 0 18 19"
                                         fill="none">
                                         <path fill-rule="evenodd" clip-rule="evenodd"
@@ -74,7 +76,7 @@
                                 </a>
                             </li>
                             <li class="nav-item">
-                                <a href="./customerdata.html" class="nav-link">
+                                <a href="./customerdata.html" class="nav-link active">
                                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="25" viewBox="0 0 24 25"
                                         fill="none">
                                         <path
@@ -117,19 +119,7 @@
         </div>
         <div id="content" class="page-body">
             <div class="page-header">
-                <div class="search-bar">
-                    <div class="search-bar-inner">
-                        <form class="d-flex search-input">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
-                                fill="none">
-                                <path
-                                    d="M21 21L16.657 16.657M16.657 16.657C17.3998 15.9141 17.9891 15.0321 18.3912 14.0615C18.7932 13.0909 19.0002 12.0506 19.0002 11C19.0002 9.94936 18.7932 8.90905 18.3912 7.93842C17.9891 6.96779 17.3998 6.08585 16.657 5.34296C15.9141 4.60007 15.0321 4.01078 14.0615 3.60874C13.0909 3.20669 12.0506 2.99976 11 2.99976C9.94936 2.99976 8.90905 3.20669 7.93842 3.60874C6.96779 4.01078 6.08585 4.60007 5.34296 5.34296C3.84263 6.84329 2.99976 8.87818 2.99976 11C2.99976 13.1217 3.84263 15.1566 5.34296 16.657C6.84329 18.1573 8.87818 19.0002 11 19.0002C13.1217 19.0002 15.1566 18.1573 16.657 16.657Z"
-                                    stroke="#979797" stroke-linecap="round" stroke-linejoin="round" />
-                            </svg>
-                            <input class="form-control" type="search" placeholder="Search" aria-label="Search">
-                        </form>
-                    </div>
-                </div>
+
                 <div class="lang-dropdown">
                     <div class="dropdown">
                         <button class="btn btn-light dropdown-toggle" type="button" id="languageDropdown"
@@ -161,6 +151,66 @@
                 </div>
             </div>
             <div class="page-body-content">
+                <h1 class="page-title">Müştəri məlumatları</h1>
+                <div class="table-filter">
+                    <div class="table-filter-container">
+                        <div class="table-filter-inner">
+                            <form action="" class="table-filter-form">
+                                <div class="select-box">
+                                    <select id="select-box-1" class="selectpicker" title="Fiziki şəxs" data-selected-text-format="static">
+                                        <option>User 1</option>
+                                        <option>User 2</option>
+                                    </select>
+                                </div>
+                                <div class="select-box">
+                                    <select id="select-box-2" class="selectpicker" data-live-search="true" multiple title="Şirkətin fəaliyyət sahəsi" data-selected-text-format="static">
+                                        <option>User 1</option>
+                                        <option>User 2</option>
+                                        <option>User 3</option>
+                                        <option>User 4</option>
+                                        <option>User 5</option>
+                                    </select>
+                                </div>
+                                <div class="select-box">
+                                    <select id="select-box-3" class="selectpicker" data-live-search="true" multiple title="AldIğı xidmət" data-selected-text-format="static">
+                                        <option>User 1</option>
+                                        <option>User 2</option>
+                                        <option>User 3</option>
+                                        <option>User 4</option>
+                                        <option>User 5</option>
+                                    </select>
+                                </div>
+                                <div class="select-box">
+                                    <div class="dropdown bootstrap-select select-with-footer">
+                                        <select id="select-box-4" class="selectpicker" data-live-search="true" multiple title="Satış temsilcisi seçin" data-selected-text-format="static">
+                                            <option>User 1</option>
+                                            <option>User 2</option>
+                                            <option>User 3</option>
+                                            <option>User 4</option>
+                                            <option>User 5</option>
+                                        </select>
+                                        <div class="hidden-footer">
+                                            <div class="dropdown-menu-footer">
+                                                <button class="btn-reset">Reset</button>
+                                                <button class="btn btn-primary btn-ok">Ok</button>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="select-box">
+                                    <select id="select-box-5" class="selectpicker" data-live-search="true" multiple title="Satış kanalı" data-selected-text-format="static">
+                                        <option>User 1</option>
+                                        <option>User 2</option>
+                                        <option>User 3</option>
+                                        <option>User 4</option>
+                                        <option>User 5</option>
+                                    </select>
+                                </div>
+                                <button class="btn btn-md btn-primary">Axtar</button>
+                            </form>
+                        </div>
+                    </div>
+                </div>
                 <div class="table-container">
                     <div class="table-container-inner">
                         <table class="table table-bordered">
@@ -225,8 +275,9 @@
         </div>
     </div>
 
-
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap-select@1.14.0-beta2/dist/js/bootstrap-select.min.js"></script>
     <script src="./assets/js/script.js"></script>
 </body>
 
