--- a/dashboard.html
+++ b/dashboard.html
@@ -28,7 +28,7 @@
                     <div class="sidebar-content">
                         <ul class="nav flex-column p-2">
                             <li class="nav-item">
-                                <a href="./dashboard.html" class="nav-link">
+                                <a href="./dashboard.html" class="nav-link active">
                                     <svg xmlns="http://www.w3.org/2000/svg" width="14" height="15" viewBox="0 0 14 15"
                                         fill="none">
                                         <g clip-path="url(#clip0_1_2519)">
@@ -48,7 +48,7 @@
                                 </a>
                             </li>
                             <li class="nav-item">
-                                <a href="./index.html" class="nav-link active">
+                                <a href="./index.html" class="nav-link">
                                     <svg xmlns="http://www.w3.org/2000/svg" width="18" height="19" viewBox="0 0 18 19"
                                         fill="none">
                                         <path fill-rule="evenodd" clip-rule="evenodd"
