--- a/sms.html
+++ b/sms.html
@@ -48,7 +48,7 @@
                                 </a>
                             </li>
                             <li class="nav-item">
-                                <a href="./index.html" class="nav-link active">
+                                <a href="./index.html" class="nav-link">
                                     <svg xmlns="http://www.w3.org/2000/svg" width="18" height="19" viewBox="0 0 18 19"
                                         fill="none">
                                         <path fill-rule="evenodd" clip-rule="evenodd"
@@ -59,7 +59,7 @@
                                 </a>
                             </li>
                             <li class="nav-item">
-                                <a href="./sms.html" class="nav-link">
+                                <a href="./sms.html" class="nav-link active">
                                     <svg xmlns="http://www.w3.org/2000/svg" width="18" height="19" viewBox="0 0 18 19"
                                         fill="none">
                                         <path
