--- a/customerdata.html
+++ b/customerdata.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/x-icon" href="./assets/img/favicon.ico">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
     <link rel="stylesheet"
         href="https://cdn.jsdelivr.net/npm/bootstrap-select@1.13.14/dist/css/bootstrap-select.min.css">
     <link rel="stylesheet" href="./assets/css/style.css">
@@ -22,9 +23,13 @@
                         <a href="./index.html" class="logo-md">
                             <img src="./assets/img/logo.svg" alt="">
                         </a>
+                        
                         <a href="./index.html" class="logo-sm">
                             <img src="./assets/img/logo-mini.svg" alt="">
                         </a>
+                        <div class="sidebar-close">
+                            <i class="bi bi-x"></i>
+                        </div>
                     </div>
 
                     <div class="sidebar-content">
@@ -119,6 +124,9 @@
         </div>
         <div id="content" class="page-body">
             <div class="page-header">
+                <div class="hamburger-menu">
+                    <i class="bi bi-list"></i>
+                </div>
 
                 <div class="lang-dropdown">
                     <div class="dropdown">
@@ -157,13 +165,15 @@
                         <div class="table-filter-inner">
                             <form action="" class="table-filter-form">
                                 <div class="select-box">
-                                    <select id="select-box-1" class="selectpicker" title="Fiziki şəxs" data-selected-text-format="static">
+                                    <select id="select-box-1" class="selectpicker" title="Fiziki şəxs"
+                                        data-selected-text-format="static">
                                         <option>User 1</option>
                                         <option>User 2</option>
                                     </select>
                                 </div>
                                 <div class="select-box">
-                                    <select id="select-box-2" class="selectpicker" data-live-search="true" multiple title="Şirkətin fəaliyyət sahəsi" data-selected-text-format="static">
+                                    <select id="select-box-2" class="selectpicker" data-live-search="true" multiple
+                                        title="Şirkətin fəaliyyət sahəsi" data-selected-text-format="static">
                                         <option>User 1</option>
                                         <option>User 2</option>
                                         <option>User 3</option>
@@ -172,7 +182,38 @@
                                     </select>
                                 </div>
                                 <div class="select-box">
-                                    <select id="select-box-3" class="selectpicker" data-live-search="true" multiple title="AldIğı xidmət" data-selected-text-format="static">
+                                    <select id="select-box-3" class="selectpicker" data-live-search="true" multiple
+                                        title="AldIğı xidmət" data-selected-text-format="static">
+                                        <option>User 1</option>
+                                        <option>User 2</option>
+                                        <option>User 3</option>
+                                        <option>User 4</option>
+                                        <option>User 5</option>
+                                        <option>User 1</option>
+                                        <option>User 2</option>
+                                        <option>User 3</option>
+                                        <option>User 4</option>
+                                        <option>User 5</option>
+                                        <option>User 1</option>
+                                        <option>User 2</option>
+                                        <option>User 3</option>
+                                        <option>User 4</option>
+                                        <option>User 5</option>
+                                        <option>User 1</option>
+                                        <option>User 2</option>
+                                        <option>User 3</option>
+                                        <option>User 4</option>
+                                        <option>User 5</option>
+                                        <option>User 1</option>
+                                        <option>User 2</option>
+                                        <option>User 3</option>
+                                        <option>User 4</option>
+                                        <option>User 5</option>
+                                        <option>User 1</option>
+                                        <option>User 2</option>
+                                        <option>User 3</option>
+                                        <option>User 4</option>
+                                        <option>User 5</option>
                                         <option>User 1</option>
                                         <option>User 2</option>
                                         <option>User 3</option>
@@ -182,7 +223,8 @@
                                 </div>
                                 <div class="select-box">
                                     <div class="dropdown bootstrap-select select-with-footer">
-                                        <select id="select-box-4" class="selectpicker" data-live-search="true" multiple title="Satış temsilcisi seçin" data-selected-text-format="static">
+                                        <select id="select-box-4" class="selectpicker" data-live-search="true" multiple
+                                            title="Satış temsilcisi seçin" data-selected-text-format="static">
                                             <option>User 1</option>
                                             <option>User 2</option>
                                             <option>User 3</option>
@@ -198,7 +240,8 @@
                                     </div>
                                 </div>
                                 <div class="select-box">
-                                    <select id="select-box-5" class="selectpicker" data-live-search="true" multiple title="Satış kanalı" data-selected-text-format="static">
+                                    <select id="select-box-5" class="selectpicker" data-live-search="true" multiple
+                                        title="Satış kanalı" data-selected-text-format="static">
                                         <option>User 1</option>
                                         <option>User 2</option>
                                         <option>User 3</option>
@@ -216,55 +259,55 @@
                         <table class="table table-bordered">
                             <thead class="table-primary text-center">
                                 <tr>
-                                    <th scope="col">Məhsul siyahısı</th>
-                                    <th scope="col">Məhsul sayı</th>
-                                    <th scope="col">Məhsulun alış qiyməti</th>
-                                    <th scope="col">Məhsulun satiş qiyməti</th>
-                                    <th scope="col">Məhsulun limit sayı</th>
+                                    <th class="text-start" scope="col">Məhsul siyahısı</th>
+                                    <th class="text-start" scope="col">Məhsul sayı</th>
+                                    <th class="text-start" scope="col">Məhsulun alış qiyməti</th>
+                                    <th class="text-start" scope="col">Məhsulun satiş qiyməti</th>
+                                    <th class="text-start" scope="col">Məhsulun limit sayı</th>
                                 </tr>
                             </thead>
                             <tbody class="text-center">
                                 <tr>
-                                    <td>1</td>
-                                    <td>323434</td>
-                                    <td>12 azn</td>
-                                    <td>23 azn</td>
-                                    <td>345</td>
+                                    <td class="text-start">1</td>
+                                    <td class="text-start">323434</td>
+                                    <td class="text-start">12 azn</td>
+                                    <td class="text-start">23 azn</td>
+                                    <td class="text-start">345</td>
                                 </tr>
                                 <tr>
-                                    <td>1</td>
-                                    <td>323434</td>
-                                    <td>12 azn</td>
-                                    <td>23 azn</td>
-                                    <td>345</td>
+                                    <td class="text-start">1</td>
+                                    <td class="text-start">323434</td>
+                                    <td class="text-start">12 azn</td>
+                                    <td class="text-start">23 azn</td>
+                                    <td class="text-start">345</td>
                                 </tr>
                                 <tr>
-                                    <td>1</td>
-                                    <td>323434</td>
-                                    <td>12 azn</td>
-                                    <td>23 azn</td>
-                                    <td>345</td>
+                                    <td class="text-start">1</td>
+                                    <td class="text-start">323434</td>
+                                    <td class="text-start">12 azn</td>
+                                    <td class="text-start">23 azn</td>
+                                    <td class="text-start">345</td>
                                 </tr>
                                 <tr>
-                                    <td>1</td>
-                                    <td>323434</td>
-                                    <td>12 azn</td>
-                                    <td>23 azn</td>
-                                    <td>345</td>
+                                    <td class="text-start">1</td>
+                                    <td class="text-start">323434</td>
+                                    <td class="text-start">12 azn</td>
+                                    <td class="text-start">23 azn</td>
+                                    <td class="text-start">345</td>
                                 </tr>
                                 <tr>
-                                    <td>1</td>
-                                    <td>323434</td>
-                                    <td>12 azn</td>
-                                    <td>23 azn</td>
-                                    <td>345</td>
+                                    <td class="text-start">1</td>
+                                    <td class="text-start">323434</td>
+                                    <td class="text-start">12 azn</td>
+                                    <td class="text-start">23 azn</td>
+                                    <td class="text-start">345</td>
                                 </tr>
                                 <tr>
-                                    <td>1</td>
-                                    <td>323434</td>
-                                    <td>12 azn</td>
-                                    <td>23 azn</td>
-                                    <td>345</td>
+                                    <td class="text-start">1</td>
+                                    <td class="text-start">323434</td>
+                                    <td class="text-start">12 azn</td>
+                                    <td class="text-start">23 azn</td>
+                                    <td class="text-start">345</td>
                                 </tr>
                                 <!-- Daha fazla satır ekleyebilirsiniz -->
                             </tbody>
