--- a/dashboard.html
+++ b/dashboard.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/x-icon" href="./assets/img/favicon.ico">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
     <link rel="stylesheet" href="./assets/css/style.css">
     <title>Tornado - Home</title>
 </head>
@@ -20,9 +21,13 @@
                         <a href="./index.html" class="logo-md">
                             <img src="./assets/img/logo.svg" alt="">
                         </a>
+                        
                         <a href="./index.html" class="logo-sm">
                             <img src="./assets/img/logo-mini.svg" alt="">
                         </a>
+                        <div class="sidebar-close">
+                            <i class="bi bi-x"></i>
+                        </div>
                     </div>
 
                     <div class="sidebar-content">
@@ -117,6 +122,9 @@
         </div>
         <div id="content" class="page-body">
             <div class="page-header">
+                <div class="hamburger-menu">
+                    <i class="bi bi-list"></i>
+                </div>
                 <div class="search-bar">
                     <div class="search-bar-inner">
                         <form class="d-flex search-input">
@@ -166,55 +174,55 @@
                         <table class="table table-bordered">
                             <thead class="table-primary text-center">
                                 <tr>
-                                    <th scope="col">Məhsul siyahısı</th>
-                                    <th scope="col">Məhsul sayı</th>
-                                    <th scope="col">Məhsulun alış qiyməti</th>
-                                    <th scope="col">Məhsulun satiş qiyməti</th>
-                                    <th scope="col">Məhsulun limit sayı</th>
+                                    <th class="text-start" scope="col">Məhsul siyahısı</th>
+                                    <th class="text-start" scope="col">Məhsul sayı</th>
+                                    <th class="text-start" scope="col">Məhsulun alış qiyməti</th>
+                                    <th class="text-start" scope="col">Məhsulun satiş qiyməti</th>
+                                    <th class="text-start" scope="col">Məhsulun limit sayı</th>
                                 </tr>
                             </thead>
                             <tbody class="text-center">
                                 <tr>
-                                    <td>1</td>
-                                    <td>323434</td>
-                                    <td>12 azn</td>
-                                    <td>23 azn</td>
-                                    <td>345</td>
+                                    <td class="text-start">1</td>
+                                    <td class="text-start">323434</td>
+                                    <td class="text-start">12 azn</td>
+                                    <td class="text-start">23 azn</td>
+                                    <td class="text-start">345</td>
                                 </tr>
                                 <tr>
-                                    <td>1</td>
-                                    <td>323434</td>
-                                    <td>12 azn</td>
-                                    <td>23 azn</td>
-                                    <td>345</td>
+                                    <td class="text-start">1</td>
+                                    <td class="text-start">323434</td>
+                                    <td class="text-start">12 azn</td>
+                                    <td class="text-start">23 azn</td>
+                                    <td class="text-start">345</td>
                                 </tr>
                                 <tr>
-                                    <td>1</td>
-                                    <td>323434</td>
-                                    <td>12 azn</td>
-                                    <td>23 azn</td>
-                                    <td>345</td>
+                                    <td class="text-start">1</td>
+                                    <td class="text-start">323434</td>
+                                    <td class="text-start">12 azn</td>
+                                    <td class="text-start">23 azn</td>
+                                    <td class="text-start">345</td>
                                 </tr>
                                 <tr>
-                                    <td>1</td>
-                                    <td>323434</td>
-                                    <td>12 azn</td>
-                                    <td>23 azn</td>
-                                    <td>345</td>
+                                    <td class="text-start">1</td>
+                                    <td class="text-start">323434</td>
+                                    <td class="text-start">12 azn</td>
+                                    <td class="text-start">23 azn</td>
+                                    <td class="text-start">345</td>
                                 </tr>
                                 <tr>
-                                    <td>1</td>
-                                    <td>323434</td>
-                                    <td>12 azn</td>
-                                    <td>23 azn</td>
-                                    <td>345</td>
+                                    <td class="text-start">1</td>
+                                    <td class="text-start">323434</td>
+                                    <td class="text-start">12 azn</td>
+                                    <td class="text-start">23 azn</td>
+                                    <td class="text-start">345</td>
                                 </tr>
                                 <tr>
-                                    <td>1</td>
-                                    <td>323434</td>
-                                    <td>12 azn</td>
-                                    <td>23 azn</td>
-                                    <td>345</td>
+                                    <td class="text-start">1</td>
+                                    <td class="text-start">323434</td>
+                                    <td class="text-start">12 azn</td>
+                                    <td class="text-start">23 azn</td>
+                                    <td class="text-start">345</td>
                                 </tr>
                                 <!-- Daha fazla satır ekleyebilirsiniz -->
                             </tbody>
