--- a/settings.html
+++ b/settings.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/x-icon" href="./assets/img/favicon.ico">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
     <link rel="stylesheet" href="./assets/css/style.css">
     <title>Tornado - Home</title>
 </head>
@@ -20,9 +21,13 @@
                         <a href="./index.html" class="logo-md">
                             <img src="./assets/img/logo.svg" alt="">
                         </a>
+                        
                         <a href="./index.html" class="logo-sm">
                             <img src="./assets/img/logo-mini.svg" alt="">
                         </a>
+                        <div class="sidebar-close">
+                            <i class="bi bi-x"></i>
+                        </div>
                     </div>
 
                     <div class="sidebar-content">
@@ -117,6 +122,9 @@
         </div>
         <div id="content" class="page-body">
             <div class="page-header">
+                <div class="hamburger-menu">
+                    <i class="bi bi-list"></i>
+                </div>
                 <div class="search-bar">
                     <div class="search-bar-inner">
                         <form class="d-flex search-input">
@@ -166,57 +174,42 @@
                         <table class="table table-bordered">
                             <thead class="table-primary text-center">
                                 <tr>
-                                    <th scope="col">Məhsul siyahısı</th>
-                                    <th scope="col">Məhsul sayı</th>
-                                    <th scope="col">Məhsulun alış qiyməti</th>
-                                    <th scope="col">Məhsulun satiş qiyməti</th>
-                                    <th scope="col">Məhsulun limit sayı</th>
+                                    <th class="text-start" scope="col">Sıra sayı</th>
+                                    <th class="text-start" scope="col">İştifadəçilərin adları</th>
+                                    <th class="text-start" scope="col">Şifrənin dəyişdirilməsi</th>
                                 </tr>
                             </thead>
                             <tbody class="text-center">
                                 <tr>
-                                    <td>1</td>
-                                    <td>323434</td>
-                                    <td>12 azn</td>
-                                    <td>23 azn</td>
-                                    <td>345</td>
+                                    <td class="text-start">1</td>
+                                    <td class="text-start">Usernam Lastname</td>
+                                    <td class="text-start"><img src="./assets/icons/edit.svg" alt=""  data-bs-toggle="modal" data-bs-target="#passwordChangeModal"></td>
                                 </tr>
                                 <tr>
-                                    <td>1</td>
-                                    <td>323434</td>
-                                    <td>12 azn</td>
-                                    <td>23 azn</td>
-                                    <td>345</td>
+                                    <td class="text-start">2</td>
+                                    <td class="text-start">Usernam Lastname</td>
+                                    <td class="text-start"><img src="./assets/icons/edit.svg" alt=""  data-bs-toggle="modal" data-bs-target="#passwordChangeModal"></td>
                                 </tr>
                                 <tr>
-                                    <td>1</td>
-                                    <td>323434</td>
-                                    <td>12 azn</td>
-                                    <td>23 azn</td>
-                                    <td>345</td>
+                                    <td class="text-start">3</td>
+                                    <td class="text-start">Usernam Lastname</td>
+                                    <td class="text-start"><img src="./assets/icons/edit.svg" alt=""  data-bs-toggle="modal" data-bs-target="#passwordChangeModal"></td>
                                 </tr>
                                 <tr>
-                                    <td>1</td>
-                                    <td>323434</td>
-                                    <td>12 azn</td>
-                                    <td>23 azn</td>
-                                    <td>345</td>
+                                    <td class="text-start">4</td>
+                                    <td class="text-start">Usernam Lastname</td>
+                                    <td class="text-start"><img src="./assets/icons/edit.svg" alt=""  data-bs-toggle="modal" data-bs-target="#passwordChangeModal"></td>
                                 </tr>
                                 <tr>
-                                    <td>1</td>
-                                    <td>323434</td>
-                                    <td>12 azn</td>
-                                    <td>23 azn</td>
-                                    <td>345</td>
+                                    <td class="text-start">5</td>
+                                    <td class="text-start">Usernam Lastname</td>
+                                    <td class="text-start"><img src="./assets/icons/edit.svg" alt=""  data-bs-toggle="modal" data-bs-target="#passwordChangeModal"></td>
                                 </tr>
                                 <tr>
-                                    <td>1</td>
-                                    <td>323434</td>
-                                    <td>12 azn</td>
-                                    <td>23 azn</td>
-                                    <td>345</td>
+                                    <td class="text-start">6</td>
+                                    <td class="text-start">Usernam Lastname</td>
+                                    <td class="text-start"><img src="./assets/icons/edit.svg" alt=""  data-bs-toggle="modal" data-bs-target="#passwordChangeModal"></td>
                                 </tr>
-                                <!-- Daha fazla satır ekleyebilirsiniz -->
                             </tbody>
                         </table>
                     </div>
@@ -224,9 +217,41 @@
             </div>
         </div>
     </div>
-
+<!-- Modal Yapısı -->
+<div class="modal fade" id="passwordChangeModal" tabindex="-1" aria-labelledby="passwordChangeModalLabel" aria-hidden="true">
+    <div class="modal-dialog  modal-dialog-centered">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="passwordChangeModalLabel">Şifrəni dəyişmək</h5>
+        </div>
+        <div class="modal-body">
+          <form>
+            <div class="mb-3  position-relative">
+              <label for="oldPassword" class="form-label">Köhnə şifrə</label>
+              <input type="password" class="form-control" id="oldPassword" placeholder="Text">
+              <i class="bi bi-eye-slash position-absolute" id="toggleOldPassword"></i>
+            </div>
+            <div class="mb-3 position-relative">
+              <label for="newPassword" class="form-label">Yeni şifrə</label>
+              <input type="password" class="form-control" id="newPassword" placeholder="Text">
+              <i class="bi bi-eye-slash position-absolute" id="toggleNewPassword""></i>
+            </div>
+            <div class="mb-3">
+              <label for="repeatPassword" class="form-label">Şifrəni təkrarla</label>
+              <input type="password" class="form-control" id="repeatPassword" placeholder="Text">
+            </div>
+          </form>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-primary btn-lg w-100">Şifrəni dəyiş</button>
+        </div>
+      </div>
+    </div>
+  </div>
+  
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
     <script src="./assets/js/script.js"></script>
 </body>
 
