adding table row click dropdown

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                         <a href="./index.html" class="logo-md">
                             <img src="./assets/img/logo.svg" alt="">
                         </a>
-                        
+
                         <a href="./index.html" class="logo-sm">
                             <img src="./assets/img/logo-mini.svg" alt="">
                         </a>
@@ -169,6 +169,14 @@
                 </div>
             </div>
             <div class="page-body-content">
+                <h1 class="page-title">Məshul bazası</h1>
+                <div class="page-card w-100">
+                    <div class="page-card-container d-flex align-items-center justify-content-center w-100">
+                        <div class="page-card-inner d-flex align-items-center justify-content-between w-100">
+                            <button class="btn btn-lg btn-primary page-card-add-btn d-flex align-items-center justify-content-center gap-2" data-bs-toggle="modal" data-bs-target="#addProductModal"><span>+</span>Əlavə et</button>
+                        </div>
+                    </div>
+                </div>
                 <div class="table-container">
                     <div class="table-container-inner">
                         <table class="table table-bordered">
@@ -224,6 +232,202 @@
                                     <td class="text-start">23 azn</td>
                                     <td class="text-start">345</td>
                                 </tr>
+                                <tr>
+                                    <td class="text-start">1</td>
+                                    <td class="text-start">323434</td>
+                                    <td class="text-start">12 azn</td>
+                                    <td class="text-start">23 azn</td>
+                                    <td class="text-start">345</td>
+                                </tr>
+                                <tr>
+                                    <td class="text-start">1</td>
+                                    <td class="text-start">323434</td>
+                                    <td class="text-start">12 azn</td>
+                                    <td class="text-start">23 azn</td>
+                                    <td class="text-start">345</td>
+                                </tr>
+                                <tr>
+                                    <td class="text-start">1</td>
+                                    <td class="text-start">323434</td>
+                                    <td class="text-start">12 azn</td>
+                                    <td class="text-start">23 azn</td>
+                                    <td class="text-start">345</td>
+                                </tr>
+                                <tr>
+                                    <td class="text-start">1</td>
+                                    <td class="text-start">323434</td>
+                                    <td class="text-start">12 azn</td>
+                                    <td class="text-start">23 azn</td>
+                                    <td class="text-start">345</td>
+                                </tr>
+                                <tr>
+                                    <td class="text-start">1</td>
+                                    <td class="text-start">323434</td>
+                                    <td class="text-start">12 azn</td>
+                                    <td class="text-start">23 azn</td>
+                                    <td class="text-start">345</td>
+                                </tr>
+                                <tr>
+                                    <td class="text-start">1</td>
+                                    <td class="text-start">323434</td>
+                                    <td class="text-start">12 azn</td>
+                                    <td class="text-start">23 azn</td>
+                                    <td class="text-start">345</td>
+                                </tr>
+                                <tr>
+                                    <td class="text-start">1</td>
+                                    <td class="text-start">323434</td>
+                                    <td class="text-start">12 azn</td>
+                                    <td class="text-start">23 azn</td>
+                                    <td class="text-start">345</td>
+                                </tr>
+                                <tr>
+                                    <td class="text-start">1</td>
+                                    <td class="text-start">323434</td>
+                                    <td class="text-start">12 azn</td>
+                                    <td class="text-start">23 azn</td>
+                                    <td class="text-start">345</td>
+                                </tr>
+                                <tr>
+                                    <td class="text-start">1</td>
+                                    <td class="text-start">323434</td>
+                                    <td class="text-start">12 azn</td>
+                                    <td class="text-start">23 azn</td>
+                                    <td class="text-start">345</td>
+                                </tr>
+                                <tr>
+                                    <td class="text-start">1</td>
+                                    <td class="text-start">323434</td>
+                                    <td class="text-start">12 azn</td>
+                                    <td class="text-start">23 azn</td>
+                                    <td class="text-start">345</td>
+                                </tr>
+                                <tr>
+                                    <td class="text-start">1</td>
+                                    <td class="text-start">323434</td>
+                                    <td class="text-start">12 azn</td>
+                                    <td class="text-start">23 azn</td>
+                                    <td class="text-start">345</td>
+                                </tr>
+                                <tr>
+                                    <td class="text-start">1</td>
+                                    <td class="text-start">323434</td>
+                                    <td class="text-start">12 azn</td>
+                                    <td class="text-start">23 azn</td>
+                                    <td class="text-start">345</td>
+                                </tr>
+                                <tr>
+                                    <td class="text-start">1</td>
+                                    <td class="text-start">323434</td>
+                                    <td class="text-start">12 azn</td>
+                                    <td class="text-start">23 azn</td>
+                                    <td class="text-start">345</td>
+                                </tr>
+                                <tr>
+                                    <td class="text-start">1</td>
+                                    <td class="text-start">323434</td>
+                                    <td class="text-start">12 azn</td>
+                                    <td class="text-start">23 azn</td>
+                                    <td class="text-start">345</td>
+                                </tr>
+                                <tr>
+                                    <td class="text-start">1</td>
+                                    <td class="text-start">323434</td>
+                                    <td class="text-start">12 azn</td>
+                                    <td class="text-start">23 azn</td>
+                                    <td class="text-start">345</td>
+                                </tr>
+                                <tr>
+                                    <td class="text-start">1</td>
+                                    <td class="text-start">323434</td>
+                                    <td class="text-start">12 azn</td>
+                                    <td class="text-start">23 azn</td>
+                                    <td class="text-start">345</td>
+                                </tr>
+                                <tr>
+                                    <td class="text-start">1</td>
+                                    <td class="text-start">323434</td>
+                                    <td class="text-start">12 azn</td>
+                                    <td class="text-start">23 azn</td>
+                                    <td class="text-start">345</td>
+                                </tr>
+                                <tr>
+                                    <td class="text-start">1</td>
+                                    <td class="text-start">323434</td>
+                                    <td class="text-start">12 azn</td>
+                                    <td class="text-start">23 azn</td>
+                                    <td class="text-start">345</td>
+                                </tr>
+                                <tr>
+                                    <td class="text-start">1</td>
+                                    <td class="text-start">323434</td>
+                                    <td class="text-start">12 azn</td>
+                                    <td class="text-start">23 azn</td>
+                                    <td class="text-start">345</td>
+                                </tr>
+                                <tr>
+                                    <td class="text-start">1</td>
+                                    <td class="text-start">323434</td>
+                                    <td class="text-start">12 azn</td>
+                                    <td class="text-start">23 azn</td>
+                                    <td class="text-start">345</td>
+                                </tr>
+                                <tr>
+                                    <td class="text-start">1</td>
+                                    <td class="text-start">323434</td>
+                                    <td class="text-start">12 azn</td>
+                                    <td class="text-start">23 azn</td>
+                                    <td class="text-start">345</td>
+                                </tr>
+                                <tr>
+                                    <td class="text-start">1</td>
+                                    <td class="text-start">323434</td>
+                                    <td class="text-start">12 azn</td>
+                                    <td class="text-start">23 azn</td>
+                                    <td class="text-start">345</td>
+                                </tr>
+                                <tr>
+                                    <td class="text-start">1</td>
+                                    <td class="text-start">323434</td>
+                                    <td class="text-start">12 azn</td>
+                                    <td class="text-start">23 azn</td>
+                                    <td class="text-start">345</td>
+                                </tr>
+                                <tr>
+                                    <td class="text-start">1</td>
+                                    <td class="text-start">323434</td>
+                                    <td class="text-start">12 azn</td>
+                                    <td class="text-start">23 azn</td>
+                                    <td class="text-start">345</td>
+                                </tr>
+                                <tr>
+                                    <td class="text-start">1</td>
+                                    <td class="text-start">323434</td>
+                                    <td class="text-start">12 azn</td>
+                                    <td class="text-start">23 azn</td>
+                                    <td class="text-start">345</td>
+                                </tr>
+                                <tr>
+                                    <td class="text-start">1</td>
+                                    <td class="text-start">323434</td>
+                                    <td class="text-start">12 azn</td>
+                                    <td class="text-start">23 azn</td>
+                                    <td class="text-start">345</td>
+                                </tr>
+                                <tr>
+                                    <td class="text-start">1</td>
+                                    <td class="text-start">323434</td>
+                                    <td class="text-start">12 azn</td>
+                                    <td class="text-start">23 azn</td>
+                                    <td class="text-start">345</td>
+                                </tr>
+                                <tr>
+                                    <td class="text-start">1</td>
+                                    <td class="text-start">323434</td>
+                                    <td class="text-start">12 azn</td>
+                                    <td class="text-start">23 azn</td>
+                                    <td class="text-start">345</td>
+                                </tr>
                                 <!-- Daha fazla satır ekleyebilirsiniz -->
                             </tbody>
                         </table>
@@ -233,6 +437,43 @@
         </div>
     </div>
 
+    <div class="modal fade" id="addProductModal" tabindex="-1" aria-labelledby="addProductModal" aria-hidden="true">
+        <div class="modal-dialog  modal-dialog-centered">
+          <div class="modal-content p-5">
+            <button type="button" class="btn-close d-block d-md-none position-absolute" data-bs-dismiss="modal" aria-label="close"></button>
+            <div class="modal-header">
+              <h5 class="modal-title">Əlavə et</h5>
+            </div>
+            <div class="modal-body">
+              <form>
+                <div class="mb-3">
+                  <label class="form-label">Məhsul siyahısı</label>
+                  <input type="text" class="form-control"placeholder="Text">
+                </div>
+                <div class="mb-3">
+                  <label class="form-label">Məhsulun satiş qiyməti</label>
+                  <input type="text" class="form-control"placeholder="Text">
+                </div>
+                <div class="mb-3">
+                  <label class="form-label">Məhsul sayı</label>
+                  <input type="text" class="form-control" placeholder="Text">
+                </div>
+                <div class="mb-3">
+                  <label class="form-label">Məhsulun alış qiyməti</label>
+                  <input type="text" class="form-control" placeholder="Text">
+                </div>
+                <div class="mb-3">
+                  <label class="form-label">Məhsulun limit sayı</label>
+                  <input type="text" class="form-control" placeholder="Text">
+                </div>
+              </form>
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-primary btn-lg w-100">Əlavə et</button>
+            </div>
+          </div>
+        </div>
+      </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="./assets/js/script.js"></script>
