--- a/settings.html
+++ b/settings.html
@@ -217,8 +217,7 @@
             </div>
         </div>
     </div>
-<!-- Modal Yapısı -->
-<div class="modal fade" id="passwordChangeModal" tabindex="-1" aria-labelledby="passwordChangeModalLabel" aria-hidden="true">
+<div class="modal fade settings-modal" id="passwordChangeModal" tabindex="-1" aria-labelledby="passwordChangeModalLabel" aria-hidden="true">
     <div class="modal-dialog  modal-dialog-centered">
       <div class="modal-content">
         <div class="modal-header">
