--- a/customerdata.html
+++ b/customerdata.html
@@ -23,7 +23,7 @@
                         <a href="./index.html" class="logo-md">
                             <img src="./assets/img/logo.svg" alt="">
                         </a>
-                        
+
                         <a href="./index.html" class="logo-sm">
                             <img src="./assets/img/logo-mini.svg" alt="">
                         </a>
@@ -159,10 +159,28 @@
                 </div>
             </div>
             <div class="page-body-content">
-                <h1 class="page-title">Müştəri məlumatları</h1>
-                <div class="table-filter">
-                    <div class="table-filter-container">
-                        <div class="table-filter-inner">
+                <div class="page-title-container">
+                    <h1 class="page-title">Müştəri məlumatları</h1>
+                    <div class="page-title-select-group">
+                        <div class="select-box">
+                            <select id="select-box-6" class="selectpicker" title="Şirkət"
+                                data-selected-text-format="static">
+                                <option>User 1</option>
+                                <option>User 2</option>
+                            </select>
+                        </div>
+                        <div class="select-box">
+                            <select id="select-box-7" class="selectpicker" title="1C"
+                                data-selected-text-format="static">
+                                <option>User 1</option>
+                                <option>User 2</option>
+                            </select>
+                        </div>
+                    </div>
+                </div>
+                <div class="page-card w-100">
+                    <div class="page-card-container d-flex align-items-center justify-content-center w-100">
+                        <div class="page-card-inner d-flex align-items-center justify-content-between w-100">
                             <form action="" class="table-filter-form">
                                 <div class="select-box">
                                     <select id="select-box-1" class="selectpicker" title="Fiziki şəxs"
@@ -251,6 +269,10 @@
                                 </div>
                                 <button class="btn btn-md btn-primary">Axtar</button>
                             </form>
+                            <button
+                                class="btn btn-lg btn-primary page-card-add-btn d-flex align-items-center justify-content-center gap-2"
+                                data-bs-toggle="modal" data-bs-target="#addCustomerModal"><span>+</span>Əlavə
+                                et</button>
                         </div>
                     </div>
                 </div>
@@ -267,12 +289,23 @@
                                 </tr>
                             </thead>
                             <tbody class="text-center">
-                                <tr>
+                                <tr class="table-row">
                                     <td class="text-start">1</td>
                                     <td class="text-start">323434</td>
                                     <td class="text-start">12 azn</td>
                                     <td class="text-start">23 azn</td>
                                     <td class="text-start">345</td>
+                                    <td class="border-0 p-0">
+                                        <div class="dropdown-menu-custom">
+                                            <ul>
+                                                <li><a href="#"><img src="./assets/icons/date.svg" alt="">Ödəniş tarixi</a></li>
+                                                <li><a href="#"><img src="./assets/icons/person.svg" alt="">Məsul şəxslər</a></li>
+                                                <li><a href="#"><img src="./assets/icons/edit-2.svg" alt="">Redaktə et</a></li>
+                                                <li><a href="#"><img src="./assets/icons/trash.svg" alt="">Sil</a></li>
+                                            </ul>
+                                        </div>
+                                    </td>
+
                                 </tr>
                                 <tr>
                                     <td class="text-start">1</td>
@@ -280,6 +313,16 @@
                                     <td class="text-start">12 azn</td>
                                     <td class="text-start">23 azn</td>
                                     <td class="text-start">345</td>
+                                    <td class="border-0 p-0">
+                                        <div class="dropdown-menu-custom">
+                                            <ul>
+                                                <li><a href="#"><img src="./assets/icons/date.svg" alt="">Ödəniş tarixi</a></li>
+                                                <li><a href="#"><img src="./assets/icons/person.svg" alt="">Məsul şəxslər</a></li>
+                                                <li><a href="#"><img src="./assets/icons/edit-2.svg" alt="">Redaktə et</a></li>
+                                                <li><a href="#"><img src="./assets/icons/trash.svg" alt="">Sil</a></li>
+                                            </ul>
+                                        </div>
+                                    </td>
                                 </tr>
                                 <tr>
                                     <td class="text-start">1</td>
@@ -287,6 +330,16 @@
                                     <td class="text-start">12 azn</td>
                                     <td class="text-start">23 azn</td>
                                     <td class="text-start">345</td>
+                                    <td class="border-0 p-0">
+                                        <div class="dropdown-menu-custom">
+                                            <ul>
+                                                <li><a href="#"><img src="./assets/icons/date.svg" alt="">Ödəniş tarixi</a></li>
+                                                <li><a href="#"><img src="./assets/icons/person.svg" alt="">Məsul şəxslər</a></li>
+                                                <li><a href="#"><img src="./assets/icons/edit-2.svg" alt="">Redaktə et</a></li>
+                                                <li><a href="#"><img src="./assets/icons/trash.svg" alt="">Sil</a></li>
+                                            </ul>
+                                        </div>
+                                    </td>
                                 </tr>
                                 <tr>
                                     <td class="text-start">1</td>
@@ -294,6 +347,16 @@
                                     <td class="text-start">12 azn</td>
                                     <td class="text-start">23 azn</td>
                                     <td class="text-start">345</td>
+                                    <td class="border-0 p-0">
+                                        <div class="dropdown-menu-custom">
+                                            <ul>
+                                                <li><a href="#"><img src="./assets/icons/date.svg" alt="">Ödəniş tarixi</a></li>
+                                                <li><a href="#"><img src="./assets/icons/person.svg" alt="">Məsul şəxslər</a></li>
+                                                <li><a href="#"><img src="./assets/icons/edit-2.svg" alt="">Redaktə et</a></li>
+                                                <li><a href="#"><img src="./assets/icons/trash.svg" alt="">Sil</a></li>
+                                            </ul>
+                                        </div>
+                                    </td>
                                 </tr>
                                 <tr>
                                     <td class="text-start">1</td>
@@ -301,6 +364,16 @@
                                     <td class="text-start">12 azn</td>
                                     <td class="text-start">23 azn</td>
                                     <td class="text-start">345</td>
+                                    <td class="border-0 p-0">
+                                        <div class="dropdown-menu-custom">
+                                            <ul>
+                                                <li><a href="#"><img src="./assets/icons/date.svg" alt="">Ödəniş tarixi</a></li>
+                                                <li><a href="#"><img src="./assets/icons/person.svg" alt="">Məsul şəxslər</a></li>
+                                                <li><a href="#"><img src="./assets/icons/edit-2.svg" alt="">Redaktə et</a></li>
+                                                <li><a href="#"><img src="./assets/icons/trash.svg" alt="">Sil</a></li>
+                                            </ul>
+                                        </div>
+                                    </td>
                                 </tr>
                                 <tr>
                                     <td class="text-start">1</td>
@@ -308,8 +381,18 @@
                                     <td class="text-start">12 azn</td>
                                     <td class="text-start">23 azn</td>
                                     <td class="text-start">345</td>
+                                    <td class="border-0 p-0">
+                                        <div class="dropdown-menu-custom">
+                                            <ul>
+                                                <li><a href="#"><img src="./assets/icons/date.svg" alt="">Ödəniş tarixi</a></li>
+                                                <li><a href="#"><img src="./assets/icons/person.svg" alt="">Məsul şəxslər</a></li>
+                                                <li><a href="#"><img src="./assets/icons/edit-2.svg" alt="">Redaktə et</a></li>
+                                                <li><a href="#"><img src="./assets/icons/trash.svg" alt="">Sil</a></li>
+                                            </ul>
+                                        </div>
+                                    </td>
                                 </tr>
-                                <!-- Daha fazla satır ekleyebilirsiniz -->
+
                             </tbody>
                         </table>
                     </div>
@@ -318,7 +401,108 @@
         </div>
     </div>
 
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <div class="modal fade" id="addCustomerModal" tabindex="-1" aria-labelledby="addCustomerModal" aria-hidden="true">
+        <div class="modal-dialog  modal-dialog-centered position-relative">
+            <div class="modal-content p-5">
+                <button type="button" class="btn-close d-block d-md-none position-absolute" data-bs-dismiss="modal"
+                    aria-label="close"></button>
+                <div class="modal-header">
+                    <h5 class="modal-title">Əlavə et</h5>
+                </div>
+                <div class="modal-body">
+                    <form>
+                        <div class="row mb-3">
+                            <div class="col-md-4">
+                                <div class="mb-3">
+                                    <label for="pdfUpload" class="form-label">PDF əlavə et</label>
+                                    <input type="file" class="form-control" id="pdfUpload">
+                                </div>
+                            </div>
+                            <div class="col-md-4">
+                                <div class="mb-3">
+                                    <label for="companyField" class="form-label">Şirkətin fəaliyyəti sahəsi</label>
+                                    <input type="text" class="form-control" id="companyField" placeholder="text">
+                                </div>
+                            </div>
+                            <div class="col-md-4">
+                                <div class="mb-3">
+                                    <label for="contractDate" class="form-label">Müqavilə bağlandığı tarix</label>
+                                    <input type="date" class="form-control" id="contractDate" placeholder="../.../...">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row mb-3">
+                            <div class="col-md-4">
+                                <div class="mb-3">
+                                    <label for="profileField" class="form-label">Müştəri profili</label>
+                                    <select class="form-select" id="profileField">
+                                        <option>Text</option>
+                                    </select>
+                                </div>
+                            </div>
+                            <div class="col-md-4">
+                                <div class="mb-3">
+                                    <label for="salesChannel" class="form-label">Satış kanalı</label>
+                                    <input type="text" class="form-control" id="salesChannel" placeholder="text">
+                                </div>
+                            </div>
+                            <div class="col-md-4">
+                                <div class="mb-3">
+                                    <label for="birthDate" class="form-label">Doğum günü / Yaranma tarixi</label>
+                                    <input type="date" class="form-control" id="birthDate" placeholder="../.../...">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row mb-3">
+                            <div class="col-md-4">
+                                <div class="mb-3">
+                                    <label for="customerCode" class="form-label">Müştəri kodu</label>
+                                    <input type="text" class="form-control" id="customerCode">
+                                </div>
+                            </div>
+                            <div class="col-md-4">
+                                <div class="mb-3">
+                                    <label for="salesRep" class="form-label">Satış təmsilçisi</label>
+                                    <input type="text" class="form-control" id="salesRep" placeholder="text">
+                                </div>
+                            </div>
+                            <div class="col-md-4">
+                                <div class="mb-3">
+                                    <label for="city" class="form-label">Şəhər</label>
+                                    <input type="text" class="form-control" id="city" placeholder="Text">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row mb-3">
+                            <div class="col-md-4">
+                                <div class="mb-3">
+                                    <label for="monthlyPayment" class="form-label">Aylıq ödəniş</label>
+                                    <input type="text" class="form-control" id="monthlyPayment" placeholder="text">
+                                </div>
+                            </div>
+                            <div class="col-md-4">
+                                <div class="mb-3">
+                                    <label for="service" class="form-label">Aldığı xidmət</label>
+                                    <input type="text" class="form-control" id="service" placeholder="text">
+                                </div>
+                            </div>
+                            <div class="col-md-4">
+                                <div class="mb-3">
+                                    <label for="additionalNote" class="form-label">Əlavə qeyd</label>
+                                    <textarea class="form-control" id="additionalNote" rows="3"
+                                        placeholder="Text"></textarea>
+                                </div>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-primary btn-lg mx-auto">Əlavə et</button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap-select@1.14.0-beta2/dist/js/bootstrap-select.min.js"></script>
     <script src="./assets/js/script.js"></script>
