--- a/customerdata.html
+++ b/customerdata.html
@@ -278,7 +278,7 @@
                 </div>
                 <div class="table-container">
                     <div class="table-container-inner">
-                        <table class="table table-bordered">
+                        <table class="table table-bordered" id="product-table">
                             <thead class="table-primary text-center">
                                 <tr>
                                     <th class="text-start" scope="col">Məhsul siyahısı</th>
@@ -307,7 +307,7 @@
                                     </td>
 
                                 </tr>
-                                <tr>
+                                <tr class="table-row">
                                     <td class="text-start">1</td>
                                     <td class="text-start">323434</td>
                                     <td class="text-start">12 azn</td>
@@ -324,7 +324,7 @@
                                         </div>
                                     </td>
                                 </tr>
-                                <tr>
+                                <tr class="table-row">
                                     <td class="text-start">1</td>
                                     <td class="text-start">323434</td>
                                     <td class="text-start">12 azn</td>
@@ -341,7 +341,7 @@
                                         </div>
                                     </td>
                                 </tr>
-                                <tr>
+                                <tr class="table-row">
                                     <td class="text-start">1</td>
                                     <td class="text-start">323434</td>
                                     <td class="text-start">12 azn</td>
@@ -358,7 +358,7 @@
                                         </div>
                                     </td>
                                 </tr>
-                                <tr>
+                                <tr class="table-row">
                                     <td class="text-start">1</td>
                                     <td class="text-start">323434</td>
                                     <td class="text-start">12 azn</td>
@@ -375,7 +375,7 @@
                                         </div>
                                     </td>
                                 </tr>
-                                <tr>
+                                <tr class="table-row">
                                     <td class="text-start">1</td>
                                     <td class="text-start">323434</td>
                                     <td class="text-start">12 azn</td>
